# HuffmanArchiver

./: CMakeLists.txt  README.md
Archiver/: Main.cpp
Include/: Archiver.h  BitReader.h  BitWriter.h  Decoder.h  Encoder.h  HuffmanTree.h  Structures.h
Source/: Archiver.cpp  BitReader.cpp  BitWriter.cpp  Decoder.cpp  Encoder.cpp  HuffmanTree.cpp  Structures.cpp
